--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -1,14 +1,14 @@
-name: Makefile CI
+name: Makefile CI and Release
 
 on:
   push:
     branches: [ "main" ]
+    tags: [ '*' ]  # Trigger the workflow on any tag push
   pull_request:
     branches: [ "main" ]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
@@ -16,4 +16,26 @@ jobs:
 
     - name: Build
       run: make
+
+  # New job for handling releases
+  release:
+    needs: build  # This ensures release job runs after build job
+    runs-on: ubuntu-latest
+    if: startsWith(github.ref, 'refs/tags/')  # Only run this job for tag pushes
+    steps:
+    - uses: actions/checkout@v3
+
+    - name: Rebuild for release  # Rebuild might not be necessary if the artifact can be shared between jobs
+      run: make
+
+    - name: Upload binary to release
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Provided by Actions, no need to manually set
+      with:
+        # This path should match the output binary from your build step
+        upload_url: ${{ github.event.release.upload_url }}  # This is the URL for uploading assets to the release
+        asset_path: ./calc
+        asset_name: calc-${{ github.ref_name }}
+        asset_content_type: application/octet-stream
 
